Fix creating new QWS surface only when it does not exist already

Calling createSurface(const QString &key, const QByteArray &data)
function is needed when starting/creating new server/client
application, and changes to region sizes (and memory allocation)
after that is handled by QWS surfaces themself inside
setGeometry(const QRect &rect) function.

Task-number: QTBUG-31254
Change-Id: I97c78ebe83b2aa9ab9e4ffc8a9987ab2528f8cf1
Reviewed-by: Paul Olav Tvete <paul.tvete@digia.com>